<resources>
    <string name="app_name">MyMessageBoard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_phone">手机号码</string>
    <string name="action_register">注册</string>
    <string name="action_get_code">获取验证码</string>
    <string name="code">验证码</string>`


    <string name="title">标题</string>
    <string name="back">返回</string>
    <string name="title_activity_message_center">MessageCenterActivity</string>

</resources>
